--- a/prog.css
+++ b/prog.css
@@ -17,13 +17,13 @@ img
     width: 70%;
     margin-left: 15%;
 }
-.text p:nth-child(1)
+.text b
 {
     font-size: 180%;
     margin-top: 3%;
     text-align: left;
 }
-.text p:nth-child(2)
+.text p
 {
     font-size: 120%;
     margin: 3% 0% 5% 0%;
