--- a/style.css
+++ b/style.css
@@ -60,6 +60,10 @@ body
     color: white;
     transition: 0.2s;
 }
+.nav a img
+{
+    margin-left: 10%;
+}
 .header
 {
     /*width: 100%;*/
@@ -286,7 +290,7 @@ h4
 #menu_m
 {
     position: absolute;
-    margin: 0% 5% 0% 0%;
+    margin: 0% 0% 0% 0%;
     top: 17%;
     left: 77.7%;
     background: black;
