--- a/style.css
+++ b/style.css
@@ -290,10 +290,10 @@ h4
 #menu_m
 {
     position: absolute;
-    top: 20%;
-    left: 60%;
+    top: 23%;
+    left: 76.6%;
     background: black;
-    opacity: 0.5;
+    opacity: 0.7;
 }
 .nav p
 {
@@ -342,6 +342,14 @@ a
     menu
     {
         display: none;
+    }
+    #menu_m
+    {
+        display: none;
+    }
+    #menu_m ul li
+    {
+        font-size: 150%;
     }
    .map
     {
