--- a/style.css
+++ b/style.css
@@ -272,26 +272,11 @@ h4
 {
     margin: 2% 0 2% 0;
 }
-/*.messenger 
-{
-    margin: 0% 5% 0% 5%;
-    width: 13%;
-}
-.messenger span
-{
-    color: white;
-    font-size: 150%;
-}
-.messenger div
-{
-    float: right;
-    margin: 20% 3% 0% 3%;
-}*/
 #menu_m
 {
     position: absolute;
-    top: 23%;
-    left: 75%;
+    top: 5em;
+    left: 70%;
     background: black;
     opacity: 0.7;
 }
@@ -309,6 +294,7 @@ h4
     border-radius: 5px;
     letter-spacing: 1px;
     opacity: 1.5;
+    font-size: 150%;
 }
 a
 {
@@ -346,10 +332,6 @@ a
     #menu_m
     {
         display: none;
-    }
-    #menu_m ul li
-    {
-        font-size: 150%;
     }
    .map
     {
